objects/Order_Status__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Status</relationshipLabel>
        <relationshipName>Order_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Shipment_Date__c</fullName>
        <label>Actual Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Account_Number_del__c</fullName>
        <label>Bill To Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <label>Bill To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Location__c</fullName>
        <label>Bill To Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Name__c</fullName>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State__c</fullName>
        <label>Bill To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Street__c</fullName>
        <label>Bill To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip__c</fullName>
        <label>Bill To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>HAR_ORDER_STATUS	BUSINESS_UNIT</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO__c</fullName>
        <label>Customer PO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Detail_Id__c</fullName>
        <label>Delivery Detail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Detail_Status__c</fullName>
        <label>Delivery Detail Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Id__c</fullName>
        <label>Delivery Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status_Date__c</fullName>
        <label>Delivery Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_User_Address__c</fullName>
        <label>End User Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_City__c</fullName>
        <label>End User City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Country__c</fullName>
        <label>End User Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_State__c</fullName>
        <label>End User State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Mfg_Cost__c</fullName>
        <description>Extended Mfg cost in USD dollars.  USD_EXT_MFG_COST field to APPS.HAR_ORDER_STATUS table in Oracle</description>
        <label>Extended Mfg Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight_Term__c</fullName>
        <label>Freight Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Header_Id__c</fullName>
        <label>Header Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_To_Org_Id__c</fullName>
        <label>Invoice To Org Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Class__c</fullName>
        <description>HAR_ORDER_STATUS	ITEM_CLASS</description>
        <label>Item Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <description>HAR_ORDER_STATUS	ITEM_TYPE</description>
        <label>Item Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Id__c</fullName>
        <externalId>true</externalId>
        <label>Line Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Cost__c</fullName>
        <description>UNIT_COST field to APPS.HAR_ORDER_STATUS table in Oracle</description>
        <label>Line Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Line_Shipment_Number__c</fullName>
        <label>Line Shipment Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Status_Date__c</fullName>
        <label>Line Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <label>Line Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Net__c</fullName>
        <description>Local currency Order Line amount.  NET field on APPS.HAR_ORDER_STATUS table in Oracle.</description>
        <label>Local Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Currency__c</fullName>
        <description>Currency of the Order Line item.  CURRENCY field on APPS.HAR_ORDER_STATUS table in Oracle.</description>
        <label>Order Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Line_Type__c</fullName>
        <label>Order Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packing_Instructions__c</fullName>
        <label>Packing Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pillar__c</fullName>
        <description>HAR_ORDER_STATUS	PILLAR</description>
        <label>Pillar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>HAR_ORDER_STATUS	PRODUCT_DESCRIPTION</description>
        <label>Product Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Code__c</fullName>
        <description>HAR_ORDER_STATUS	PRODUCT_GROUP_CODE</description>
        <label>Product Group Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_Description__c</fullName>
        <description>HAR_ORDER_STATUS	PRODUCT_GROUP_DESCRIPTION</description>
        <label>Product Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>HAR_ORDER_STATUS	PRODUCT_LINE</description>
        <label>Product Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promise_Date__c</fullName>
        <description>HAR_ORDER_STATUS	PROMISE_DATE</description>
        <label>Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>REQUEST_DATE	DATE</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Percentage__c</fullName>
        <label>Sales Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Ship_Date__c</fullName>
        <description>HAR_ORDER_STATUS	SCHEDULE_SHIP_DATE</description>
        <label>Schedule Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Number__c</fullName>
        <label>Ship To Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location__c</fullName>
        <label>Ship To Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Name__c</fullName>
        <label>Ship To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Org_Id__c</fullName>
        <label>Ship To Org Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <label>Ship To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Street__c</fullName>
        <label>Ship To Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Zip__c</fullName>
        <label>Ship To Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_Number__c</fullName>
        <label>Sold To Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Contact__c</fullName>
        <label>Sold To Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Org_Id__c</fullName>
        <label>Sold To Org Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <label>Sold To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>HAR_ORDER_STATUS	SUB_CATEGORY</description>
        <label>Sub Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subinventory__c</fullName>
        <label>Subinventory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USD_FX_Rate__c</fullName>
        <description>The rate that we assign the actual cost of the item for us to produce it.  USD_FX_RATE field on APPS.HAR_ORDER_STATUS table in Oracle.</description>
        <label>USD FX Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USD_Net__c</fullName>
        <description>USD Net Order Line amount.  USD_NET fields to the APPS.HAR_ORDER_STATUS table in Oracle</description>
        <label>USD Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Selling_Price__c</fullName>
        <description>UNIT_SELLING_PRICE field on APPS.HAR_ORDER_STATUS table in Oracle.</description>
        <label>Unit Selling Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Waybill__c</fullName>
        <label>Waybill</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Status</label>
    <nameField>
        <label>Order Line #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>